<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_start_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.franck.candycrush_like.Start_Activity"
    tools:showIn="@layout/activity_start_">


    <Button
        android:text="@string/playlvl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlvl3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/playlvl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlvl4"
        android:layout_below="@+id/playlvl3"
        android:layout_alignStart="@+id/playlvl3" />

    <Button
        android:text="@string/playlvl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlvl2"
        android:layout_above="@+id/playlvl3"
        android:layout_alignStart="@+id/playlvl3" />

    <Button
        android:text="@string/playlvl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlvl1"
        android:layout_above="@+id/playlvl2"
        android:layout_alignStart="@+id/playlvl2" />


</RelativeLayout>
