<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.franck.candycrush_like.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exit_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="156dp" />

    <Button
        android:text="@string/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rules_button"

        android:layout_above="@+id/exit_button"
        android:layout_alignStart="@+id/exit_button"
        android:layout_marginBottom="46dp" />

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_button"
        android:layout_marginBottom="38dp"
        android:layout_above="@+id/rules_button"
        android:layout_alignStart="@+id/rules_button" />
</RelativeLayout>
