<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.franck.candycrush_like.Game_Activity"
    tools:showIn="@layout/activity_game_">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#FFFF"
        android:keepScreenOn="true">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:id="@+id/fullscreen_content"
            android:layout_weight="1"
            android:background="#65327bea"
            android:gravity="center"
            android:layout_height="match_parent">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_box"
            android:orientation="vertical"
            android:layout_width="@dimen/score_size"
            android:gravity="center"
            android:background="#327bea"
            android:layout_height="match_parent">


            <ToggleButton
                android:text="ToggleButton"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/level_b"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/level_t"
                android:text="@string/level_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/level"
                android:layout_toEndOf="@id/level_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/score_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <TextView
                android:id="@+id/score_t"
                android:text="@string/score_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/score"
                android:layout_toEndOf="@id/score_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/coups_b"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/coups_t"
                    android:text="@string/coups_t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/coups"
                    android:layout_toEndOf="@id/coups_t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/remaining_b"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/remaining_t"
                    android:text="@string/remaining_t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/remaining"
                    android:layout_toEndOf="@id/remaining_t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
            <Button
                android:text="Passer"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PassButton" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
